Add sql server database and seprate logically AppointmentBooking database with unique schema

--- a/Bootstrapper/DoctorAppointment.Bootstrapper/appsettings.json
+++ b/Bootstrapper/DoctorAppointment.Bootstrapper/appsettings.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=.;Database=DoctorBookingDB;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=TAHA\\SQLEXPRESS01;Database=DoctorBookingDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
