--- a/Shared/DBooking.Shared/DBooking.Shared.csproj
+++ b/Shared/DBooking.Shared/DBooking.Shared.csproj
@@ -10,4 +10,9 @@
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+	</ItemGroup>
+
 </Project>
