Add Doctor Availability Module with traditional layered architecture

--- a/Bootstrapper/DoctorAppointment.Bootstrapper/DBooking.Bootstrapper.csproj
+++ b/Bootstrapper/DoctorAppointment.Bootstrapper/DBooking.Bootstrapper.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\DBooking.Module.DoctorAvailability.Api\DBooking.Module.DoctorAvailability.Api.csproj" />
     <ProjectReference Include="..\..\Modules\AppointmentBooking\DoctorBooking.Modules.AppointmentBooking\DBooking.Modules.AppointmentBooking.Api.csproj" />
   </ItemGroup>
 
