--- a/Bootstrapper/DoctorAppointment.Bootstrapper/appsettings.json
+++ b/Bootstrapper/DoctorAppointment.Bootstrapper/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=.;Database=DoctorBookingDB;TrustServerCertificate=True;"
-    "DefaultConnection": "Server=TAHA\\SQLEXPRESS01;Database=DoctorBookingDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-0NIJ6E8\\SQLEXPRESS;Database=DoctorBookingDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
 
 
