--- a/Modules/AppointmentBooking/DBooking.Modules.AppointmentBooking.Application/DBooking.Modules.AppointmentBooking.Application.csproj
+++ b/Modules/AppointmentBooking/DBooking.Modules.AppointmentBooking.Application/DBooking.Modules.AppointmentBooking.Application.csproj
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\DBooking.Shared\DBooking.Shared.csproj" />
+    <ProjectReference Include="..\DBooking.Modules.AppointmentBooking.Core\DBooking.Modules.AppointmentBooking.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
 </Project>
