FixIssue: Move DoctorAvailability module to Modules folder

--- a/Bootstrapper/DoctorAppointment.Bootstrapper/DBooking.Bootstrapper.csproj
+++ b/Bootstrapper/DoctorAppointment.Bootstrapper/DBooking.Bootstrapper.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DBooking.Module.DoctorAvailability.Api\DBooking.Module.DoctorAvailability.Api.csproj" />
     <ProjectReference Include="..\..\Modules\AppointmentBooking\DoctorBooking.Modules.AppointmentBooking\DBooking.Modules.AppointmentBooking.Api.csproj" />
+    <ProjectReference Include="..\..\Modules\DoctorAvailability\DBooking.Modules.DoctorAvailability.Api\DBooking.Modules.DoctorAvailability.Api.csproj" />
   </ItemGroup>
 
 </Project>
