--- a/Modules/AppointmentBooking/DBooking.Modules.AppointmentBooking.Infrastructure/DBooking.Modules.AppointmentBooking.Infrastructure.csproj
+++ b/Modules/AppointmentBooking/DBooking.Modules.AppointmentBooking.Infrastructure/DBooking.Modules.AppointmentBooking.Infrastructure.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DBooking.Modules.AppointmentBooking.Application\DBooking.Modules.AppointmentBooking.Application.csproj" />
+    <ProjectReference Include="..\DBooking.Modules.AppointmentBooking.Core\DBooking.Modules.AppointmentBooking.Core.csproj" />
   </ItemGroup>
 
 </Project>
