--- a/Bootstrapper/DoctorAppointment.Bootstrapper/DBooking.Bootstrapper.csproj
+++ b/Bootstrapper/DoctorAppointment.Bootstrapper/DBooking.Bootstrapper.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Modules\AppointmentBooking\DoctorBooking.Modules.AppointmentBooking\DBooking.Modules.AppointmentBooking.Api.csproj" />
+    <ProjectReference Include="..\..\Modules\AppointmentConfirmation\DBooking.Modules.AppointmentConfirmation.Api\DBooking.Modules.AppointmentConfirmation.Api.csproj" />
     <ProjectReference Include="..\..\Modules\DoctorAvailability\DBooking.Modules.DoctorAvailability.Api\DBooking.Modules.DoctorAvailability.Api.csproj" />
   </ItemGroup>
 
