--- a/Bootstrapper/DoctorAppointment.Bootstrapper/DBooking.Bootstrapper.csproj
+++ b/Bootstrapper/DoctorAppointment.Bootstrapper/DBooking.Bootstrapper.csproj
@@ -15,9 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\DBooking.Modules.AppointmentManagement.Internal\DBooking.Modules.AppointmentManagement.Internal.csproj" />
-    <ProjectReference Include="..\..\Modules\AppointmentBooking\DoctorBooking.Modules.AppointmentBooking\DBooking.Modules.AppointmentBooking.Api.csproj" />
+    <ProjectReference Include="..\..\Modules\AppointmentBooking\DBooking.Modules.AppointmentBooking.Api\DBooking.Modules.AppointmentBooking.Api.csproj" />
     <ProjectReference Include="..\..\Modules\AppointmentConfirmation\DBooking.Modules.AppointmentConfirmation.Api\DBooking.Modules.AppointmentConfirmation.Api.csproj" />
+    <ProjectReference Include="..\..\Modules\DoctorAppointmentManagement\DBooking.Modules.AppointmentManagement.Internal\DBooking.Modules.AppointmentManagement.Internal.csproj" />
     <ProjectReference Include="..\..\Modules\DoctorAvailability\DBooking.Modules.DoctorAvailability.Api\DBooking.Modules.DoctorAvailability.Api.csproj" />
   </ItemGroup>
 
