--- a/Modules/AppointmentConfirmation/DBooking.Modules.AppointmentConfirmation.Api/DBooking.Modules.AppointmentConfirmation.Api.csproj
+++ b/Modules/AppointmentConfirmation/DBooking.Modules.AppointmentConfirmation.Api/DBooking.Modules.AppointmentConfirmation.Api.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Modules.AppointmentConfirmation.Domain\DBooking.Modules.AppointmentConfirmation.Services.csproj" />
+    <ProjectReference Include="..\DBooking.Modules.AppointmentConfirmation.Services\DBooking.Modules.AppointmentConfirmation.Services.csproj" />
   </ItemGroup>
 
 </Project>
